---
config:
  theme: redux
  look: neo
---
classDiagram
    class AuthController {
        - AuthService authService
        + googleLogin(idToken: String) ResponseEntity~ApiResponse~AuthResponse~~
    }

    class AuthService {
        <<interface>>
        + googleLogin(idToken: String) AuthResponse
    }

    class AuthServiceImpl {
        - GoogleTokenVerifier googleTokenVerifier
        - UserRepository userRepository
        - PasswordEncoder passwordEncoder
        - JwtTokenProvider jwtTokenProvider
        - RedisAuthService redisAuthService
        + googleLogin(idToken: String) AuthResponse
        - createUserFromGooglePayload(result: Payload) User
        - getAuthResponse(user: User, authentication: Authentication) AuthResponse
    }

    class GoogleTokenVerifier {
        + verify(idToken: String) Payload
    }

    class JwtTokenProvider {
        + generateToken(authentication: Authentication) String
        + generateRefreshToken() String
    }

    class RedisAuthService {
        <<interface>>
        + saveRefreshToken(refreshToken: String, userId: String, jti: String) void
    }

    class AuthResponse {
        - String accessToken
        - String refreshToken
        - String tokenType
        - UserInfoResponse userInfo
    }

    class UserRepository {
        <<interface>>
        + findByEmail(email: String) Optional~User~
        + save(user: User) User
    }

    class PasswordEncoder {
        <<interface>>
        + encode(rawPassword: CharSequence) String
    }

    class User {
        - UUID id
        - String fullname
        - String email
        - String passwordHash
        - String avatarUrl
        - Boolean isActive
        - UserRole role
    }

    %% Relationships
    AuthController ..> AuthService
    AuthResponse <.. AuthController
    AuthService <|.. AuthServiceImpl

    AuthServiceImpl ..> GoogleTokenVerifier
    AuthServiceImpl ..> UserRepository
    AuthServiceImpl ..> PasswordEncoder
    AuthServiceImpl ..> JwtTokenProvider
    AuthServiceImpl ..> RedisAuthService

    AuthServiceImpl ..> AuthResponse
    AuthServiceImpl ..> User

    UserRepository ..> User
